Too much to recall

--- a/project/assets/styles/app.scss
+++ b/project/assets/styles/app.scss
@@ -36,3 +36,14 @@ form{
         margin: 0 41%;
     }
 }
+
+
+#order-view{
+    margin: 3% 5%;
+    #button-barbecue-add{
+        display: block;
+        margin-left: auto;
+        margin-right: 0;
+        margin-bottom: 3%;
+    }
+}
