--- a/project/templates/index/huren.html.twig
+++ b/project/templates/index/huren.html.twig
@@ -4,4 +4,14 @@
 
 {% block body %}
 
+<div class="container">
+    <div id="order-view" class="row">
+        <div class="col-2" style="background:red;">
+        d
+        </div>
+        <div class="col-10" id="renting_table_custom" style="background:blue;">
+        </div>
+    </div>
+</div>
+
 {% endblock %}
