--- a/project/templates/forms/barbecue_import.html.twig
+++ b/project/templates/forms/barbecue_import.html.twig
@@ -8,6 +8,7 @@
         {{ form_row(form.name) }}
         {{ form_row(form.barbecue_price) }}
         {{ form_row(form.image) }}
+        {{ form_row(form.type) }}
         {{ form_row(form.description) }}
 
         <button class="btn btn-lg btn-primary" type="submit">Upload barbecue</button>
