--- a/project/templates/index/huren.html.twig
+++ b/project/templates/index/huren.html.twig
@@ -9,7 +9,13 @@
         <div class="col-2" style="background:red;">
         d
         </div>
-        <div class="col-10" id="renting_table_custom" style="background:blue;">
+        <div class="col-10" 
+        {# id="renting_table_custom" #}
+         style="background:blue;">
+        <div id="loader">
+        <div id="shadow"></div>
+        <div id="box"></div>
+        </div>
         </div>
     </div>
 </div>
