--- a/project/assets/styles/app.scss
+++ b/project/assets/styles/app.scss
@@ -47,15 +47,35 @@ form{
         margin-bottom: 3%;
     }
 }
+#renting_table_custom{
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  display: flex;
+}
 .rent-barbecue-container{
-    display: inline-flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin: 0 1.4%;
+  margin: 2% 0;
 
+    &:hover{
+      transform: scale(1.1);
+      transition-duration: .35s;
+      cursor: pointer;
+    }
     img{
-        height: 200px;
-        width: 150px;
+      height: 200px;
+      width: 200px;
+    }
+    .barbecue-title{
+      text-align: center;
+      // margin-top: -4%;
+      background-color: white;
+      z-index: 20;
+      color: black;
+      width: 100%;
+    }
+    a{
+      height: 200px;
+      width: 200px;
+      text-decoration: none;
     }
     img:hover > .rent-barbecue-container{
         background-color: black;
@@ -63,12 +83,10 @@ form{
 }
 
 // css loader
+.loader_rent_page{
+  left: 46%;
+}
 #loader {
-    /* Uncomment this to make it run! */
-    /*
-       animation: loader 5s linear infinite; 
-    */
-    
     position: absolute;
   }
   @keyframes loader {
@@ -123,3 +141,33 @@ form{
     color: #fff;
   }
 // css loader end
+
+#overview_barbecue_container{
+  img{
+    width: 100%;
+    height: 500px;
+  }
+  .overview_title{
+    width: auto;
+    margin: 1% 4%;
+    text-align: center;
+    font-size: 27px;
+    font-weight: bold;
+    border-bottom: 1px solid;
+  }
+  .overview_description, .overview_price, .overview_type{
+    width: auto;
+    padding: 0 7%;
+  }
+  .overview_price > span{
+    margin-left: 12%;
+  }
+  .overview_type > span{
+    margin-left: 5%;
+  }
+  .overview_type{
+    border-bottom: 1px solid;
+    margin: 0 4%;
+    padding: 0 3%;
+  }
+}
