--- a/project/templates/index/huren.html.twig
+++ b/project/templates/index/huren.html.twig
@@ -6,15 +6,11 @@
 
 <div class="container">
     <div id="order-view" class="row">
-        <div class="col-2" style="background:red;">
-        d
-        </div>
-        <div class="col-10" 
-        {# id="renting_table_custom" #}
-         style="background:blue;">
-        <div id="loader">
-        <div id="shadow"></div>
-        <div id="box"></div>
+        <div class="col-12" 
+        id="renting_table_custom">
+        <div class="loader_rent_page" id="loader">
+            <div id="shadow"></div>
+            <div id="box"></div>
         </div>
         </div>
     </div>
