--- a/project/templates/index/orders.html.twig
+++ b/project/templates/index/orders.html.twig
@@ -12,6 +12,10 @@
             <a href="/admin/import/barbecue"><button type="button" class="btn btn-primary" id="button-barbecue-add">add barbecue</button></a>
         </div>
         <div class="col-12">
+           <div class="loader_rent_page" id="loader" style="margin-top:5%;">
+            <div id="shadow"></div>
+            <div id="box"></div>
+        </div>
             <table class="table table-hover" id="ordersTable">
                 <thead>
                     <tr>
@@ -19,7 +23,6 @@
                     <th scope="col">Name</th>
                     <th scope="col">Description</th>
                     <th scope="col">Price</th>
-                    <th scope="col">Customer</th>
                     <th scope="col">Image</th>
                     <th scope="col">Remove</th>
                     </tr>
