created the add accessoires command

--- a/project/assets/styles/app.scss
+++ b/project/assets/styles/app.scss
@@ -170,4 +170,8 @@ form{
     margin: 0 4%;
     padding: 0 3%;
   }
+  .container_button_barbecue{
+    text-align: right;
+    margin: 10% 0;
+  }
 }
