--- a/project/templates/index/overviewBarbecue.html.twig
+++ b/project/templates/index/overviewBarbecue.html.twig
@@ -19,6 +19,9 @@
                 <div class="overview_type">Type: <span>{{ data[0].type }}</span></div>
                 <div class="overview_description">{{ data[0].description }}</div>
                 </div>
+                <div class="container_button_barbecue col-12" >
+                    <a href="/bqq/add/cart/{{ data[0].id}}"><button type="button" class="btn btn-primary" id="button-barbecue-add">add barbecue</button></a>
+                </div>
             </div>
         </div>
     </div>
