kut git *bitch slap*

--- a/project/templates/index/add_accessoires.html.twig
+++ b/project/templates/index/add_accessoires.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}{% endblock %}
+{% block title %} - accessoire{% endblock %}
 
 {% block body %}
 <div class="container" id="container_add_accessoires">
