--- a/project/templates/index/index.html.twig
+++ b/project/templates/index/index.html.twig
@@ -3,5 +3,22 @@
 {% block title %}{% endblock %}
 
 {% block body %}
+<div class="image-slider-container">
+<div class="slideshow-container">
 
+  <!-- Full-width images with number and caption text -->
+  <div class="mySlides">
+    <img src="https://www.hofvaneckberge.nl/templates/rt_elixir/custom/images/articles/cards/lp_all-in/hof-van-eckberge-barbecue-5-uurs-arrangement.jpg" style="width:100%">
+  </div>
+
+  <div class="mySlides">
+    <img src="https://www.hofvaneckberge.nl/templates/rt_elixir/custom/images/articles/cards/lp_all-in/hof-van-eckberge-barbecue-4-uurs-arrangement.jpg" style="width:100%">
+  </div>
+
+  <div class="mySlides">
+    <img src="https://www.hofvaneckberge.nl/templates/rt_elixir/custom/images/articles/cards/lp_all-in/hof-van-eckberge-barbecue-3-uurs-arrangement.jpg" style="width:100%">
+  </div>
+</div>
+<br>
+</div>
 {% endblock %}
