--- a/project/templates/base.html.twig
+++ b/project/templates/base.html.twig
@@ -2,8 +2,8 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}BackyardBBQ{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+        <title>BackyardBBQ{% block title %}{% endblock %}</title>
+        <link rel="icon" type="image/x-icon" href="{{ asset('logo.png') }}" />
         <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
@@ -38,7 +38,7 @@
             </div>
             <form class="reset-margins form-inline">
                 <ul class="navbar-nav">
-                    <li class="nav-item" id="cart-container"></li>
+                    <a href="/checkout"><li class="nav-item" id="cart-container"></li></a>
                     <li class="nav-item">
                      {% if app.user %}
                         <a class="nav-link" href="/logout">logout</a>
