de laatste puntjes van de ener laaste i

--- a/project/templates/index/add_accessoires.html.twig
+++ b/project/templates/index/add_accessoires.html.twig
@@ -12,7 +12,7 @@
                 <div class="accessoire_description">{{ element.description }}</div>
         </a></div>
     {% endfor %}
-        <div class="col-4" id="accessoire_nothing"><a href="">
+        <div class="col-4" id="accessoire_nothing"><a href="/checkout">
                 Niks.
         </a></div>
     </div>
