--- a/project/templates/index/index.html.twig
+++ b/project/templates/index/index.html.twig
@@ -3,6 +3,12 @@
 {% block title %}{% endblock %}
 
 {% block body %}
+<style>
+body{
+  overflow: hidden;
+}
+</style>
+
 <div class="image-slider-container">
 <div class="slideshow-container">
 
@@ -20,5 +26,11 @@
   </div>
 </div>
 <br>
+</div>
+<div class="container">
+  <div class="row">
+    <div class="col-12" id="backyard-title"> Welkom op backyardBBQ</div>
+    <div class="col-12" id="backyard-bio">Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero's De Finibus Bonorum et Malorum for use in a type specimen book</div>
+  </div>
 </div>
 {% endblock %}
