--- a/project/assets/styles/app.scss
+++ b/project/assets/styles/app.scss
@@ -6,6 +6,18 @@ $highlight_color: #A62103;
 $button_color: #590202;
 $font_color: #0D0D0D;
 
+#backyard-bio{
+  text-align: center;
+  font-size: 20px;
+}
+
+#backyard-title{
+  font-size: 47px;
+  text-align: center;
+  font-weight: bold;
+  margin-bottom: 1%;
+}
+
 button{
   background-color: $button_color !important;
   color: white !important;
@@ -41,6 +53,7 @@ a{
 }
 
 .image-slider-container{
+  margin: 1% 28%;
   * {box-sizing:border-box}
 
   img{
@@ -69,6 +82,11 @@ a{
     to {opacity: 1}
   }
   
+}
+
+#ordersTable2{
+  margin-top: 3%;
+  display: none;
 }
 
 form{
@@ -117,6 +135,7 @@ form{
         margin-left: auto;
         margin-right: 0;
         margin-bottom: 3%;
+        margin-top: 3%;
     }
 }
 #renting_table_custom{
@@ -216,9 +235,11 @@ form{
 // css loader end
 
 #overview_barbecue_container{
+
   img{
     width: 100%;
     height: 500px;
+    margin-top: 5%;
   }
   .overview_title{
     width: auto;
