--- a/project/templates/index/checkout_complete.html.twig
+++ b/project/templates/index/checkout_complete.html.twig
@@ -36,12 +36,14 @@
                     <th></th>
                 </tr>
                 {% endfor %}
+                {% if accessoire is not null %}
                 <tr style='border-bottom: 2px solid black;'>
                 <th class="unbold">extra</th>
                 <th>{{ accessoire.name }}</th>
                 <th class="checkout-price unbold">€ {{ accessoire.price }}</th>
                 <th></th>
                 </tr>
+                {% endif %}
                 <tr>
                 <th class="unbold">btw</th>
                 <th></th>
