--- a/project/templates/index/orders.html.twig
+++ b/project/templates/index/orders.html.twig
@@ -32,6 +32,20 @@
                 </tbody>
             </table>
         </div>
+        </div>
+            <table class="table table-hover" id="ordersTable2">
+                <thead>
+                    <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Name</th>
+                    <th scope="col">Order</th>
+                    </tr>
+                </thead>
+                <tbody>
+                
+                </tbody>
+            </table>
+        </div>
     </div>
 </div>
 
