--- a/project/templates/index/overviewBarbecue.html.twig
+++ b/project/templates/index/overviewBarbecue.html.twig
@@ -7,7 +7,7 @@
 <div class="container">
     <div class="row">
         <div class="col-12"
-         id="overview_barbecue_container">
+         id="overview_barbecue_container" style="margin-top:5%">
             <div class="row">
                 <div class="col-6">
                     <img src="/uploads/{{ data[0].image }}"></div>
